--- a/Module0 done/index.html
+++ b/Module0 done/index.html
@@ -11,7 +11,7 @@
   <link href="index.css" rel="stylesheet" type="text/css" >
 		
 		<header>
-			<title>M3 CORP</title>	
+			<title>Group 2</title>	
 		</header>
 		<h2 id="corp_name" style="font-family:Georgia"> GROUP 2 <span id = "corp_logo">®</span></h2>
 	</head>
@@ -33,14 +33,12 @@
         	<a class="nav-link active" href="index.html"><div class="link"> HOME </div></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about_CS/AboutCS.html"><div class="link"> About Cameron Sarni</div></a>
+            <a class="nav-link" href="about_CS/AboutCS.html"><div class="link"> About Cameron Sarni</div></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about_MM/about_author.html"><div class="link"> About Moise Medina</div></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href=""><div class="link"> CONTACT </div></a>
-          </li>
+          
         </ul>
     </div>
 </nav>
